Updated documentation chunks

--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "chunk-docs": "node scripts/chunk-docs.mjs"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.80",
+    "gray-matter": "^4.0.3",
+    "langchain": "^0.3.11",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
