--- a/package.json
+++ b/package.json
@@ -12,13 +12,26 @@
     "test:coverage": "jest --coverage",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "chunk-docs": "node scripts/chunk-docs.mjs"
+    "db:up": "docker compose up -d",
+    "db:down": "docker compose down",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "node scripts/seed.js",
+    "ask": "node scripts/ask.js",
+    "ask:llm": "node scripts/ask-llm.js"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.24",
     "@langchain/core": "^0.3.80",
+    "ai": "^6.0.66",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
     "gray-matter": "^4.0.3",
     "langchain": "^0.3.11",
     "next": "16.1.6",
+    "pg": "^8.18.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
@@ -33,6 +46,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "eslint-config-prettier": "^10.1.8",
@@ -41,6 +55,7 @@
     "jest-environment-jsdom": "^30.2.0",
     "prettier": "^3.7.4",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
